--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="pad-top">
+    <div id="spaces-page" class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
         <div class="content">
             <div class="section">
