--- a/themes/H3-Theme/static/scss/components/card.scss
+++ b/themes/H3-Theme/static/scss/components/card.scss
@@ -9,6 +9,11 @@
 		height: 250px;
 	}
 }
+.card {
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 .fade-card {
     h4 {
@@ -40,7 +45,6 @@
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align: center;
     transition: transform 0.5s ease-out;
     &:hover {
         background-color: green;
