--- a/themes/H3-Theme/static/scss/components/carousel.scss
+++ b/themes/H3-Theme/static/scss/components/carousel.scss
@@ -20,6 +20,34 @@
             font-weight: 300;
         }
     }
+    .carousel-title {
+        color: white;
+        position: absolute;
+        height: 60%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 30px;
+        h3 {
+            font-size: 36pt;
+            font-weight: 500;
+        }
+    }
+    .carousel-description {
+        color: white;
+        background-color: rgba(46, 46, 46, 0.9);
+        position: absolute;
+        height: 50%;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        padding: 30px;
+        h3 {
+            font-size: 16pt;
+            font-weight: 500;
+        }
+    }
 
     .carousel-item {
         height: 100%;
