--- a/public/scss/libs/_vars.scss
+++ b/public/scss/libs/_vars.scss
@@ -15,5 +15,5 @@ $palette: (
 	border:				#111111,
 	border-bg:			#111111,
 	highlight:			#FFCC00,
-	accent1:			#FFCC00
+	accent1:			#FFCC00 //ffdb4d should be it, double check if used elsewhere first
 );
