--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -14,7 +14,10 @@
 
                 </div>
             </div>
-            <a id="loginBtn" class="btn btn-light my-2 my-sm-0" href="../event-form" role="button">Apply Here</a>
+
+            <div class="center">
+                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform" role="button">Apply Here</a>
+            </div>
         </div>
     </div>
 {{end}}
