--- a/themes/H3-Theme/static/scss/base/page.scss
+++ b/themes/H3-Theme/static/scss/base/page.scss
@@ -24,6 +24,9 @@ body {
     margin: 50px;
     padding: 20px;
 }
+.wide-content {
+    padding: 20px;
+}
 
 #page-title {
     text-align: center;
@@ -93,4 +96,8 @@ ul {
         font-size: 24pt;
         text-align: center;
     }
+}
+
+.center {
+    text-align: center;
 }
