--- a/themes/H3-Theme/static/scss/components/card.scss
+++ b/themes/H3-Theme/static/scss/components/card.scss
@@ -12,8 +12,14 @@
 .card {
     border-radius: 20px;
     overflow: hidden;
+}
+
+.my-card {
+    border-radius: 20px;
+    overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 
 .fade-card {
     h4 {
