--- a/public/scss/components/block.scss
+++ b/public/scss/components/block.scss
@@ -1,6 +1,7 @@
 .block-grid {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     overflow: hidden;
     border-radius: 20px;
     background-color: _palette(bg-alt);
@@ -8,8 +9,8 @@
 
 
     display: grid;
-    grid-template-columns: 30% 30px auto 30px; //30px border around content
-    grid-template-rows: 30px 100px 50px auto 30px;
+    grid-template-columns: 20% 30px auto 30px; //30px border around content
+    grid-template-rows: 30px 50px 30px 60px 30px;
     grid-template-areas:
         "img . . ."
         "img . title ."
