--- a/public/scss/components/carousel.scss
+++ b/public/scss/components/carousel.scss
@@ -20,6 +20,36 @@
             font-weight: 300;
         }
     }
+    .carousel-title {
+        color: white;
+        position: absolute;
+        height: 60%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 30px;
+        h3 {
+            font-size: 36pt;
+            font-weight: 500;
+        }
+    }
+    .carousel-description {
+        color: white;
+        background-color: rgba(46, 46, 46, 0.9);
+        position: absolute;
+        height: 40%;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        padding: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
+        h3 {
+            font-size: 16pt;
+            font-weight: 500;
+        }
+    }
 
     .carousel-item {
         height: 100%;
@@ -40,7 +70,7 @@
         box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.7);
     }
 
-    .tester3 {
+    .carousel-image {
         height: 100%;
         width: auto;
         filter: brightness(50%);
