--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,9 +1,9 @@
-<script src="../js/jquery.min.js" type="text/javascript"></script>
-<script src="../js/jquery-ui.min.js" type="text/javascript"></script>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 
 <script src="../js/barba.min.js" type="text/javascript"></script>
+
+
 
 
 <script src="../js/main.js" type="text/javascript"></script>
@@ -11,3 +11,4 @@
 <script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/nav.js" type="text/javascript"></script>
+<script src="../js/eventform.js" type="text/javascript"></script>
