--- a/themes/H3-Theme/static/scss/components/carousel.scss
+++ b/themes/H3-Theme/static/scss/components/carousel.scss
@@ -37,12 +37,14 @@
         color: white;
         background-color: rgba(46, 46, 46, 0.9);
         position: absolute;
-        height: 50%;
+        height: 40%;
         top: 100%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
-        padding: 30px;
+        padding: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
         h3 {
             font-size: 16pt;
             font-weight: 500;
@@ -68,7 +70,7 @@
         box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.7);
     }
 
-    .tester3 {
+    .carousel-image {
         height: 100%;
         width: auto;
         filter: brightness(50%);
