--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'libs/vars.scss';
 @import 'libs/functions.scss';
+@import 'libs/animations.scss';
 
 
 @import 'base/page.scss';
@@ -11,6 +12,7 @@
 @import 'components/carousel.scss';
 @import 'components/icon.scss';
 
+@import 'layout/eventform.scss';
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
 @import 'layout/home.scss';
