--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,5 +1,18 @@
 
+// Initialize Firebase
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+<script>
+    var config = {
+        apiKey: "AIzaSyDPZLaOVEBhOvLNeUn7pmJVlkf0z9boiGM",
+        authDomain: "h3-sdpt.firebaseapp.com",
+        databaseURL: "https://h3-sdpt.firebaseio.com",
+        projectId: "h3-sdpt",
+        storageBucket: "h3-sdpt.appspot.com",
+        messagingSenderId: "609543007859"
+    };
+    firebase.initializeApp(config);
+</script>
+
 
 <script src="../js/barba.min.js" type="text/javascript"></script>
 
