--- a/themes/H3-Theme/static/scss/layout/eventform.scss
+++ b/themes/H3-Theme/static/scss/layout/eventform.scss
@@ -44,6 +44,8 @@
     * {
         /*overflow: hidden;*/
     }
+    background-color: _palette(bg-alt);
+    border-radius: 20px;
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 80px auto;
@@ -52,19 +54,16 @@
         "content receipt";
     .progress-cell {
         grid-area: progress;
-        background-color: #e6ffee;
         padding: 10px;
     }
     .content-cell {
         grid-area: content;
-        background-color: #e6ecff;
         h3 {
             text-align: center;
         }
     }
     .receipt-cell {
         grid-area: receipt;
-        background-color: #ffe6e6;
     }
 }
 
@@ -203,10 +202,20 @@
     .time-cell {
         grid-area: time;
         background-color: #ffe6e6;
+        ul {
+            padding: 0px;
+            li label {
+                display: inline;
+            }
+        }
     }
 }
 
 
 .event-description {
     list-style: circle;
+}
+
+label {
+    width: 220px;
 }
