--- a/themes/H3-Theme/static/scss/layout/login.scss
+++ b/themes/H3-Theme/static/scss/layout/login.scss
@@ -1,4 +1,11 @@
 #login-pane, #register-pane {
     text-align: center;
     padding: 20px;
+    label {
+        text-align: left;
+        width: 100px;
+    }
+    input[type=submit] {
+        margin: 20px;
+    }
 }
