removeClass now in receipt

--- a/themes/H3-Theme/layouts/page/eventform.html
+++ b/themes/H3-Theme/layouts/page/eventform.html
@@ -7,7 +7,7 @@
                 <!-- The progress bar tabs walking the user through the form -->
                 <div class="progress-cell">
                     <div class="tab-bar">
-                        <a class="tablink" onclick="openTab(event, 'Selection')">Venue Selection</a>
+                        <a class="tablink active" onclick="openTab(event, 'Selection')">Venue Selection</a>
                         <a class="tablink" onclick="openTab(event, 'Details')">Event Details</a>
                         <a class="tablink" onclick="openTab(event, 'Amenities')">Amenities</a>
                         <a class="tablink" onclick="openTab(event, 'Contact')">Contact Info</a>
