--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="section">
-                        <h2>The Goal</h2>
+                        <h2>SerenDPT</h2>
                         <div id="goal-container" class="fade-container row">
                             <div id="company-card" class="fade-card col">
                                 <img class="icon" src="img/board-icon.png" alt="">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
 
-                    <div class="section">
+                    <!--<div class="section">
                         <h2>Our Activity</h2>
 
                         <div class="fade-container row">
@@ -192,7 +192,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
 
                 </div>
 <!--
