final commit? Just cleaning?

--- a/themes/H3-Theme/layouts/page/history.html
+++ b/themes/H3-Theme/layouts/page/history.html
@@ -8,7 +8,7 @@
     <div id="history" >
 
         {{ range .Params.slides }}
-            <div class="history-grid slide pin-page">
+            <div class="history-grid">
                 <div class="title-cell">
                     {{ .title }}
                 </div>
