--- a/themes/H3-Theme/layouts/partials/head.html
+++ b/themes/H3-Theme/layouts/partials/head.html
@@ -1,3 +1,4 @@
+<title>H3 - A company of innovators</title>
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -29,7 +30,6 @@
 
 
 <!-- JQuery UI-->
-<title>jQuery UI Datepicker - Display inline</title>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
