--- a/themes/H3-Theme/layouts/page/eventform.html
+++ b/themes/H3-Theme/layouts/page/eventform.html
@@ -62,9 +62,9 @@
                     <!-- Event details tab content -->
                     <div id="Details" class="tabcontent">
                         <h3>Event Details</h3>
-                        <label>Title:</label><input type="text"><br>
-                        <label>Type:</label>
-                        <select>
+                        <label for="eventTitle">Title:</label><input id="eventTitle" type="text"><br>
+                        <label for="eventType">Type:</label>
+                        <select id="eventType">
                             <option>-</option>
                             <option>Seminar</option>
                             <option>Workshop</option>
@@ -78,8 +78,8 @@
                             <option>Other</option>
                         </select>
                         <br>
-                        <label>Expected # of people:</label><input type="text" onkeypress="validateNumber(event)"><br>
-                        <label>Description:</label><input type="text"><br>
+                        <label for="expPeople">Expected # of people:</label><input id="expPeople" type="text" onkeypress="validateNumber(event)"><br>
+                        <label for="eventDescription">Description:</label><input id="eventDescription" type="text"><br>
                     </div>
 
                     <!-- Amenities selection tab content -->
@@ -98,39 +98,33 @@
                     <!-- Contact info tab content -->
                     <div id="Contact" class="tabcontent">
                         <h3>Contact Info</h3>
-                        <label>Company/Organizaiton:</label> <input type="text"><br>
-                        <label>Full Name:</label> <input type="text"><br>
-                        <label>Email:</label> <input type="text"><br>
-                        <label>Cell Phone:</label> <input type="text"><br>
+                        <label for="contactCompany">Company/Organizaiton:</label> <input id="contactCompany" type="text"><br>
+                        <label for="contactName">Full Name:</label> <input id="contactName" type="text"><br>
+                        <label for="contactEmail">Email:</label> <input id="contactEmail" type="text"><br>
+                        <label for="contactPhone">Cell Phone:</label> <input id="contactPhone" type="text"><br>
                     </div>
 
                     <!-- Review and Submit Request tab content -->
                     <div id="Review" class="tabcontent">
-                        <h3>Review</h3>
-                        <p>Date, Space, All costs asociated, contact, agree to conditions, submit</p>
-                        <input type="submit" value="Submit Request">
+                        <!-- javascript adds elements here -->
                     </div>
                 </div>
 
                 <!-- The recipt on the right side of the screen -->
                 <div class="receipt-cell">
                     <div id="receipt">
-                        <h5 id="receipt-title">Event Name</h5>
+                        <h5 id="receipt-title">Receipt</h5>
                         <table id="receipt-table" style="width:100%">
                             <tr>
                                 <th>Item</th>
                                 <th>Cost</th>
                             </tr>
                             <tr>
-                                <td>Microphone</td>
-                                <td>€10.00</td>
-                            </tr>
-                            <tr>
-                                <td>Speakers (2)</td>
-                                <td>€36.00</td>
+                                <td>Security Deposit</td>
+                                <td>€20.00</td>
                             </tr>
                         </table>
-                        <h5 id="receipt-total">Total: €46.00</h5>
+                        <h5 id="receipt-total">Total: €20.00</h5>
                     </div>
                 </div>
 
