--- a/themes/H3-Theme/static/scss/layout/history.scss
+++ b/themes/H3-Theme/static/scss/layout/history.scss
@@ -47,8 +47,7 @@
     grid-template-areas:
         ". . title title title . ."
         "pic1 pic1 text text text pic2 pic2"
-        "pic1 pic1 text text text pic2 pic2"
-        "pic3 pic3 text text text pic4 pic4"
+        "pic1 pic1 text text text pic4 pic4"
         "pic3 pic3 text text text pic4 pic4";
     .title-cell {
         grid-area: title;
@@ -59,6 +58,17 @@
         grid-area: text;
         padding: 20px;
         font-size: 18pt;
+        text-align: justify;
+        .content-buttons {
+            text-align: center;
+        }
+    }
+    .pic1-cell, .pic2-cell, .pic3-cell, .pic4-cell {
+        padding: 20px;
+        img {
+            width: 100%;
+            height: auto;
+        }
     }
     .pic1-cell {
         grid-area: pic1;
